Trying to fix image issue on mobile.

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
 }
 
 .sentence {
